--- a/pages/menu/index.wxml
+++ b/pages/menu/index.wxml
@@ -1,4 +1,18 @@
 <!--index.wxml-->
 <view class="container">
- menu
+  <view class="selectTap">
+    <view>所有</view>
+    <view>我的</view>
+  </view>
+  <view class="banner"></view>
+  <view class="content">
+    <scroll-view scroll-y class="rightScroll">
+      <view class="menuItem" wx:for="{{menuList}}" wx:key="index">
+        私房菜
+      </view>
+    </scroll-view>
+    <scroll-view scroll-y class="leftScroll">
+      <menu-info wx:for="{{menuInfoList}}" wx:key="index"/>
+    </scroll-view>
+  </view>
 </view>
